--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "react-test-renderer": "^17.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -38,8 +40,11 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
     "react-scripts": "^5.0.0",
     "ts-jest": "^27.1.3"
